uheldigt forsøg på at tilføje intervaller af time registrations... ui duer ik